Libbson-1.1.6-dev
=================

Libbson 1.1.5
=============

It is my pleasure to announce to you the release of Libbson-1.1.5.

This is a patch release with small bug fixes:

 * Fix link error "missing __sync_add_and_fetch_4" in GCC on i386 -
   the functions bson_atomic_int_add and bson_atomic_int64_add are now
   compiled and exported if needed in i386 mode
 * Fix version check for GCC 5 and future versions of Clang
 * Fix warnings and errors building on various platforms

With this release, Libbson abandons the convention that odd-numbered patch
versions indicate unstable releases. We switch to simple semantic versioning:
1.1.5 is a stable release with bug fixes since 1.1.4. During subsequent
development the version will be "1.1.6-dev".

Thanks to everyone who contributed to this version of Libbson.

 * A. Jesse Jiryu Davis
 * Christian Hergert
 * Jason Carey
 * Hannes Magnusson
 * Paul Melnikow

-- A. Jesse Jiryu Davis

Libbson 1.1.4
=============

It is my pleasure to announce to you the release of Libbson-1.1.4.

This release is a minor patch release with one bug fix for bson_iter_timeval

Thanks to everyone who contributed to the development of this release candidate for
Libbson.

 * Jason Carey
 * A. Jesse Jiryu Davis
 * Vladimir Zidar

-- Jason Carey

Libbson 1.1.2
=============

It is my pleasure to announce to you the release of Libbson-1.1.2.

This release is a minor patch release with one bug fix for mingw.

* sscanf_s doesn't exist for mingw.

-- Jason Carey

Libbson 1.1.0
=============

It is my pleasure to announce to you the release of Libbson-1.1.0.

This release is a stable release with some ABI additions and bugfixes.

The below changes include the changes mentioned in the rc0.

ABI/API changes include:
 * RC0
   * Deprecation of bson_copy_to_excluding
   * Addition of bson_copy_to_excluding_noinit
 * Removal of MIN, MAX and ABS macros in favor of BSON_MIN, BSON_MAX and