@@ -58,11 +58,11 @@
 
     <p>The following instructions are for UNIX-like systems such as GNU/Linux, FreeBSD, and Solaris. To build on Windows, see the instructions for <link xref="installing#building-windows">Building on Windows</link>.</p>
 
-    <p>The most recent release of libbson is 1.1.5 and can be <link href="https://github.com/mongodb/libbson/releases/download/1.1.5/libbson-1.1.5.tar.gz">downloaded here</link>. The following snippet will download and extract the current release of the driver.</p>
+    <p>The most recent release of libbson is 1.1.6 and can be <link href="https://github.com/mongodb/libbson/releases/download/1.1.6/libbson-1.1.6.tar.gz">downloaded here</link>. The following snippet will download and extract the current release of the driver.</p>
 
-    <screen><output style="prompt">$ </output><input>wget https://github.com/mongodb/libbson/releases/download/1.1.5/libbson-1.1.5.tar.gz</input>
-<output style="prompt">$ </output><input>tar -xzf libbson-1.1.5.tar.gz</input>
-<output style="prompt">$ </output><input>cd libbson-1.1.5/</input></screen>
+    <screen><output style="prompt">$ </output><input>wget https://github.com/mongodb/libbson/releases/download/1.1.6/libbson-1.1.6.tar.gz</input>
+<output style="prompt">$ </output><input>tar -xzf libbson-1.1.6.tar.gz</input>
+<output style="prompt">$ </output><input>cd libbson-1.1.6/</input></screen>
 
     <p>Minimal dependencies are needed to build Libbson. On UNIX-like systems, pthreads (the POSIX threading library) is required.</p>
 
@@ -119,7 +119,7 @@ Bindings:
 
     <p>Let's start by generating Visual Studio project files for libbson. The following assumes we are compiling for 64-bit Windows using Visual Studio 2010 Express which can be freely downloaded from Microsoft.</p>
 
-    <screen><output style="prompt">&gt; </output><input>cd libbson-1.1.5</input>
+    <screen><output style="prompt">&gt; </output><input>cd libbson-1.1.6</input>
 <output style="prompt">&gt; </output><input>cmake -G "Visual Studio 2010 Win64" "-DCMAKE_INSTALL_PREFIX=C:\libbson"</input>
 <output style="prompt">&gt; </output><input>msbuild.exe ALL_BUILD.vcxproj</input>
 <output style="prompt">&gt; </output><input>msbuild.exe INSTALL.vcxproj</input></screen>
